--- a/templates/notification_email.html
+++ b/templates/notification_email.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <p>TEST</p>
+    <p>Уважаемый {{ user }},</p>
+<p>
+   Сообщаем вам, что у задачи "{{ business.title }}" истёк срок выполнения.
+</p>
 </body>
 </html>
