--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,40 +2,54 @@
 {% block content %}
 <link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='https')}}">
 <link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='http')}}">
-<div>
-    <p class="navbar-brand" >{{ current_user.login }} <a href="/logout" class="btn btn-danger">Выйти</a></p>
-</div>
-
-<div>
-    <ul>
-        <li><a href="/">Задачи</a></li>
-    </ul>
-</div>
+<link rel="stylesheet" href="{{url_for('.static', filename='css/main.css', _scheme='https')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/main.css', _scheme='http')}}">
+    <header>
+        <div>
+        <span class="back-button"><a class="btn btn-secondary" href="/">Все задачи</a></span>
+        <div class="div-login">
+        <span class="navbar-brand" style="color: #f5f5f5; text-align: right;" >{{ current_user.login }} <a href="/logout" class="btn btn-danger" title="Выйти"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a href="/user_settings" class="btn btn-primary" title="Настройки"><i class="fa fa-cog" aria-hidden="true"></i></a></span></div></div>
+    </header>
 <h1>Категории <a href="/add_category" class="btn btn-primary">Добавить категорию</a></h1>
-    <ul class="list-group">
-        {% if categories %}
+    <table class="table">
+        <thead>
+            <tr>
+              <th scope="col">Название</th>
+              {% if current_user.buttons_enabled%}
+              <th scope="col">Действия</th>
+              {% endif %}
+            </tr>
+        </thead>
+        <tbody>
             {% for category in categories %}
-                <div class="task" data-id="{{category.id}}">
-                <li class="list-group-item">{{category.title}}<div>
-                    <a href="/redact_category/{{ category.id }}" class="btn btn-warning">
-                        Переименовать
+                <tr class="task" data-id="{{category.id}}">
+                <td>{{category.title}}</td>
+                <td>
+                    <div>
+                        {% if current_user.buttons_enabled%}
+                    <a href="/redact_category/{{ category.id }}" class="btn btn-warning" title="Переименовать">
+                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                     </a>
-                    <a href="/delete_category/{{ category.id }}" class="btn btn-danger">
-                        Удалить
+                    <a href="/delete_category/{{ category.id }}" class="btn btn-danger" title="Удалить">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
                     </a>
-                </div></li></div>
+                        {% endif %}
+                </div></td></tr>
             {% endfor %}
-        {% endif %}
-        </ul>
+        </tbody>
+    </table>
+{% if current_user.context_menu_enabled %}
 <nav id="context-menu" class="context-menu">
       <li class="context-menu__item">
-        <a href="#" class="context-menu__link" data-action="redact_category"><i class="fa fa-edit"></i>Изменить</a>
+        <a class="context-menu__link" data-action="redact_category">Изменить</a>
       </li>
       <li class="context-menu__item">
-        <a href="#" class="context-menu__link" data-action="delete_category"><i class="fa fa-times"></i>Удалить</a>
+        <a class="context-menu__link" data-action="delete_category">Удалить</a>
       </li>
     </ul>
   </nav>
-    <script src="{{url_for('.static', filename='js/context_menu.js', _scheme='https')}}"></script>
+<script src="{{url_for('.static', filename='js/context_menu.js', _scheme='https')}}"></script>
 <script src="{{url_for('.static', filename='js/context_menu.js', _scheme='http')}}"></script>
+{% endif %}
 {% endblock %}
