--- a/templates/main.html
+++ b/templates/main.html
@@ -2,19 +2,19 @@
 {% block content %}
 <link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='https')}}">
 <link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='http')}}">
-<div>
-    <p class="navbar-brand" >{{ current_user.login }} <a href="/logout" class="btn btn-danger">Выйти</a></p>
-</div>
-
-<div>
-    <ul>
-        <li><a href="/categories">Категории</a></li>
-    </ul>
-</div>
-        {% if url_for(request.endpoint) == "/"%}
+<link rel="stylesheet" href="{{url_for('.static', filename='css/main.css', _scheme='https')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/main.css', _scheme='http')}}">
+    <header>
+        <div>
+        <span class="back-button"><a class="btn btn-secondary" href="/categories">Категории</a></span>
+        <div class="div-login">
+        <span class="navbar-brand" style="color: #f5f5f5; text-align: right;" >{{ current_user.login }} <a href="/logout" class="btn btn-danger" title="Выйти"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a href="/user_settings" class="btn btn-primary" title="Настройки"><i class="fa fa-cog" aria-hidden="true"></i></a></span></div></div>
+    </header>
             <div>
                 <h1>Задачи <a href="/add_business" class="btn btn-primary">Добавить задачу</a></h1>
             </div>
+                <div>
                 <span>Категории</span>
                 <select class="select">
                     <option value="/">Все задачи</option>
@@ -23,8 +23,7 @@
                     {% for category in categories %}
                         <option value="/index/{{category.title}}">{{category.title}}</option>
                     {% endfor %}
-                </select>
-            </div>
+                </select></div>
             <script>
             $(document).ready(function(){
 	            $('.select').change(function(){
@@ -32,64 +31,96 @@
 	            });
             });
             </script>
-        <ul class="list-group">
-                {% for business in businesses %}
-                <div class="task" data-id="{{business.id}}" data-status="{{business.status}}">
-                <li class="list-group-item">{{business.title}}</li>
-                <li class="list-group-item">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">Приоритет</th>
-                          <th scope="col">Дата начала</th>
-                          <th scope="col">Дата окончания</th>
-                          <th scope="col">Статус задачи</th>
-                          <th scope="col">Категория</th>
-                          <th scope="col"><a href="/redact_business/{{ business.id }}" class="btn btn-warning">
-                        Изменить
-                    </a></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          {% if business.priority == 1%}
+                <div>
+                <span>Сортировать по</span>
+                <select class="selectSortParam" data-selected="{{param}}">
+                    <option value="id"> ряду добавления </option>
+                    <option value="title">алфавиту</option>
+                    <option value="start_date">дате начала</option>
+                    <option value="end_date">дате окончания</option>
+                    <option value="priority">важности</option>
+                </select>
+                <span> в порядке </span>
+                <select class="selectSortOrder" data-selected="{{order}}">
+                    <option value="desc">убывания</option>
+                    <option value="asc">возрастания</option>
+                </select>
+                    </div>
+            <script>
+                $(".selectSortParam").val($(".selectSortParam").attr("data-selected"));
+                $(".selectSortOrder").val($(".selectSortOrder").attr("data-selected"));
+                $(document).ready(function(){
+	            $(".selectSortParam, .selectSortOrder").change(function(){
+		            window.location.href = "/" + "?param=" + $(".selectSortParam").val() + "&order=" + $(".selectSortOrder").val();
+	            });
+            });
+            </script>
+            <table class="table">
+                <thead>
+                    <tr>
+                      <th scope="col">Описание</th>
+                      <th scope="col">Важности</th>
+                      <th scope="col">Дата начала</th>
+                      <th scope="col">Дата окончания</th>
+                      <th scope="col">Выполнена</th>
+                      <th scope="col">Категория</th>
+                      {% if current_user.buttons_enabled%}
+                        <th scope="col">Действия</th>
+                      {% endif %}
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for business in businesses %}
+                        <tr class="task" data-id="{{business.id}}" data-sender="" data-status="{{business.status}}" data-end="{% if business.ended_by_user %} 1 {% else %} 0 {% endif %}"
+                        style="{% if business.status == 'Срок выполнения истёк' %} background: #ff9999; {% elif business.ended_by_user %} background: #76ff7a; {% else %} background: #faf74d; {% endif %}">
+                            <td class="title">{{business.title}}</td>
+                            {% if business.priority == 1%}
                             <td>Наименьшая</td>
                           {% elif business.priority == 2 %}
                             <td>Средняя</td>
                           {% elif business.priority == 3 %}
-                            <td>Наибольшая</td>
+                            <td>Наивысшая</td>
                           {% endif %}
                           <td>{{business.start_date}}</td>
                           <td>{{business.end_date}}</td>
-                          <td>{{business.status}}</td>
-                          {% if business.category%}
-                            <td>{{business.category.title}}</td>
+                          {% if business.ended_by_user%}
+                            <td>Да</td>
+                          {% else %}
+                            <td>Нет</td>
+                          {% endif %}
+                            {% if business.category %}
+                            <td class="title">{{business.category.title}}</td>
                           {% else %}
                             <td>Без категории</td>
                           {% endif %}
-                            <td><a href="/delete_business/{{ business.id }}" class="btn btn-danger">
-                        Удалить
-                    </a></td>
+                            {% if current_user.buttons_enabled%}
+                            <td><a href="/redact_business/{{ business.id }}" class="btn btn-warning" title="Изменить"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                                <a href="/delete_business/{{ business.id }}" class="btn btn-danger" title="Удалить"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                                {% if business.ended_by_user %}
+                                <a href="/enable_business/{{ business.id }}" class="btn btn-primary" title="Возобновить"><i class="fa fa-refresh" aria-hidden="true"></i></a>
+                                {% else %}
+                                <a href="/disable_business/{{ business.id }}" class="btn btn-success" title="Отметить как выполненную"><i class="fa fa-check" aria-hidden="true"></i></a>
+                                {% endif %}</td>
+                            {% endif %}
                         </tr>
-                      </tbody>
-                    </table>
-                </li></div>
-                {% endfor %}
-            {% elif businesses == []%}
-                <h1>Задачи <a href="/add_business" class="btn btn-primary">Добавить задачу</a></h1>
-            {% endif %}
-            </ul>
+                      {% endfor %}
+                </tbody>
+            </table>
+{% if current_user.context_menu_enabled%}
     <nav id="context-menu" class="context-menu">
         <ul class="context-menu__items" id="context-menu__items">
+           <li class="context-menu__item">
+                <a id="endOrNot" class="context-menu__link" data-action=""></a>
+        </li>
       <li class="context-menu__item">
-        <a href="#" class="context-menu__link" data-action="redact_business"><i class="fa fa-edit"></i>Изменить</a>
+        <a  class="context-menu__link" data-action="redact_business">Изменить</a>
       </li>
       <li class="context-menu__item">
-        <a href="#" class="context-menu__link" data-action="delete_business"><i class="fa fa-times"></i>Удалить</a>
+        <a class="context-menu__link" data-action="delete_business">Удалить</a>
       </li>
     </ul>
   </nav>
-    <script src="{{url_for('.static', filename='js/context_menu.js', _scheme='https')}}"></script>
-<script src="{{url_for('.static', filename='js/context_menu.js', _scheme='http')}}"></script>
-
+    <script src="{{url_for('.static', filename='js/context_menu_main.js', _scheme='https')}}"></script>
+<script src="{{url_for('.static', filename='js/context_menu_main.js', _scheme='http')}}"></script>
+{% endif %}
 {% endblock %}
