--- a/templates/reset_password_email.html
+++ b/templates/reset_password_email.html
@@ -9,11 +9,10 @@
 <p>
     Чтобы сбросить пароль
     <a href="{{ url_for('reset_password', token=token, _external=True) }}">
-        кликните по ссылке
+        кликните по данной ссылке
     </a>.
 </p>
-<p>Кроме того, вы можете вставить следующую ссылку в адресную строку браузера:</p>
-<p>{{ url_for('reset_password', token=token, _external=True) }}</p>
+
 <p>Срок действия ссылки - 10 минут</p>
 <p>Если вы не запрашивали сброс пароля, просто проигнорируйте это сообщение.</p>
 </body>
